<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coasy</string>
    <string name="title_activity_usersettings">Settings</string>
    <string name="title_section1">Courses</string>
    <string name="title_section2">Students</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_course_emptyList">No courses yet!</string>
    <string name="fragment_students_emptyList">No students yet!</string>
    <string name="fragment_contacts_students_emptyList">There arn\'t any students in this course yet!</string>
    <string name="fragment_contacts_contacts_emptyList">There arn\'t any contacts in this group yet!</string>
    <string name="pref_user_profile">User settings</string>
    <string name="pref_contactGroup_summary">Change the contact group to display</string>
    <string name="pref_contactGroup_title">Contact group</string>
    <string name="pref_btnSelectGoogleAccount_summary">Change the google account to be used</string>
    <string name="pref_btnSelectGoogleAccount_title">Select account</string>
    <string name="title_activity_newcourse">New course</string>
    <string name="title_activity_editcourse">Edit course</string>
    <string name="fragment_course_edit_bAddStudent_text">Add student</string>
    <string name="fragment_course_edit_bRemoveStudents_text">Remove students</string>
    <string name="fragment_course_edit_bDone_text">Done</string>
    <string name="fragment_course_edit_etAddress_hint">Address</string>
    <string name="fragment_course_edit_etDescription_hint">Description</string>
    <string name="fragment_course_edit_etTitle_hint">Title</string>

</resources>